--- a/src/components/Main/Feed/Feed.module.css
+++ b/src/components/Main/Feed/Feed.module.css
@@ -1,15 +1,9 @@
 .container {
-  /* display: grid;  */
-
-  /* grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
-  grid-template-rows: masonry;
-  align-items: start; */
-
   display: flex;
   flex-direction: column;
   max-width: 1100px;
-  /* max-height: 1200px; */
   flex-wrap: wrap;
+  margin: 0 auto;
 
   /* -webkit-animation: 2.7s ease 0s normal forwards 1 fadein;
   animation: 2.7s ease 0s normal forwards 1 fadein; */
@@ -79,7 +73,6 @@ li.element:hover .download
   background-repeat: no-repeat;
   background-size: contain;
   line-height: 1;
-  /* background-image: url(./img/like128.svg); */
   background-image: url(./img/h7.svg);
   padding: 2px 9px 0;
   cursor: initial;
