--- a/src/components/Header/Header.module.css
+++ b/src/components/Header/Header.module.css
@@ -3,11 +3,13 @@
   flex-direction: row;
   justify-content: space-between;
   padding: 26px 40px;
+  background: linear-gradient(45deg, #e6e9f0, #eef1f5);
   /* background: rgb(245, 245, 245); */
   /* background-image: linear-gradient(120deg, #fdfbfb 0%, #ebedee 100%); */
   /* background-image: linear-gradient(to top, #f3e7e9 0%, #e3eeff 99%, #e3eeff 100%); */
-  background-image: radial-gradient(73% 147%, #EADFDF 59%, #ECE2DF 100%), radial-gradient(91% 146%, rgba(255,255,255,0.50) 47%, rgba(0,0,0,0.50) 100%);
- background-blend-mode: screen;
+  /* background-image: radial-gradient(73% 147%, #EADFDF 59%, #ECE2DF 100%), radial-gradient(91% 146%, rgba(255,255,255,0.50) 47%, rgba(0,0,0,0.50) 100%);
+ background-blend-mode: screen; */
+
   /* background-image: linear-gradient(to top, #fdcbf1 0%, #fdcbf1 1%, #e6dee9 100%); */
   /* background-image: linear-gradient(to top, #cfd9df 0%, #e2ebf0 100%); */
 }
