--- a/src/components/Main/Feed/Feed.module.css
+++ b/src/components/Main/Feed/Feed.module.css
@@ -4,6 +4,7 @@
   max-width: 1100px;
   flex-wrap: wrap;
   margin: 0 auto;
+  padding-top: 5px;
 
   /* -webkit-animation: 2.7s ease 0s normal forwards 1 fadein;
   animation: 2.7s ease 0s normal forwards 1 fadein; */
